// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviousLeavesSameReason renders different legend and hint when claim is for Caring Leave 1`] = `
<fieldset
  class="usa-fieldset margin-top-3 usa-form-group"
>
  <legend
    class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
  >
    Did you take any previous leave between July 1, 2021 and the first day of the leave you are applying for, for the same reason as you are applying?
  </legend>
  <span
    class="display-block line-height-sans-5 measure-5 usa-intro"
  >
    Select No if your current paid leave from PFML began on July 1, 2021.
  </span>
  <div
    class="margin-top-3"
  >
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice1"
        name="has_previous_leaves_same_reason"
        type="radio"
        value="true"
      />
      <label
        class="usa-radio__label"
        for="InputChoice1"
      >
        Yes
        <span
          class="usa-hint text-base-dark"
        >
          <br />
          I have taken previous leave for the same reason
        </span>
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice2"
        name="has_previous_leaves_same_reason"
        type="radio"
        value="false"
      />
      <label
        class="usa-radio__label"
        for="InputChoice2"
      >
        No
        <span
          class="usa-hint text-base-dark"
        >
          <br />
          I have not taken previous leave for the same reason, or my other leave was through Massachusetts’ PFML program
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`PreviousLeavesSameReason renders different legend and hint when claim is for Caring Leave 2`] = `
<fieldset
  class="usa-fieldset margin-top-3 usa-form-group"
>
  <legend
    class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
  >
    Did you take any previous leave between January 1, 2021 and January 1, 2021 for the same reason as you are applying for paid leave now?
  </legend>
  <div
    class="margin-top-3"
  >
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice3"
        name="has_previous_leaves_same_reason"
        type="radio"
        value="true"
      />
      <label
        class="usa-radio__label"
        for="InputChoice3"
      >
        Yes
        <span
          class="usa-hint text-base-dark"
        >
          <br />
          I have taken previous leave for the same reason
        </span>
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice4"
        name="has_previous_leaves_same_reason"
        type="radio"
        value="false"
      />
      <label
        class="usa-radio__label"
        for="InputChoice4"
      >
        No
        <span
          class="usa-hint text-base-dark"
        >
          <br />
          I have not taken previous leave for the same reason, or my other leave was through Massachusetts’ PFML program
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;
